Concurrency - Using RecursiveTask with ForkJoinPool